# AntTrader

./: .env  Cargo.toml  README.md  build.py  pyproject.toml
crates/adapters/ashare/: Cargo.toml
crates/adapters/blockchain/: Cargo.toml  README.md
crates/adapters/blockchain/src/: config.rs  decode.rs  factories.rs  lib.rs  math.rs  reporting.rs
crates/adapters/coinbase_intx/: Cargo.toml  README.md
crates/adapters/coinbase_intx/src/: lib.rs
crates/adapters/ctp/: Cargo.toml
crates/adapters/databento/: Cargo.toml  README.md
crates/adapters/databento/src/: common.rs  data.rs  decode.rs  enums.rs  factories.rs  historical.rs  lib.rs  live.rs  loader.rs  symbology.rs  types.rs
crates/adapters/hyperliquid/: Cargo.toml  README.md
crates/adapters/hyperliquid/src/: lib.rs
crates/analysis/: Cargo.toml  README.md
crates/analysis/src/: analyzer.rs  lib.rs  statistic.rs
crates/analysis/src/python/: mod.rs
crates/analysis/src/statistics/: expectancy.rs  long_ratio.rs  loser_avg.rs  loser_max.rs  loser_min.rs  mod.rs  profit_factor.rs  returns_avg.rs  returns_avg_loss.rs  returns_avg_win.rs  returns_volatility.rs  risk_return_ratio.rs  sharpe_ratio.rs  sortino_ratio.rs  win_rate.rs  winner_avg.rs  winner_max.rs  winner_min.rs
crates/backtest/: Cargo.toml  README.md  build.rs  cbindgen_cython.toml
crates/backtest/src/: accumulator.rs  config.rs  data_client.rs  data_iterator.rs  engine.rs  exchange.rs  execution_client.rs  lib.rs
crates/backtest/src/ffi/: engine.rs  mod.rs
crates/backtest/src/modules/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  opt.rs
crates/cli/src/database/: postgres.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: clock.rs  component.rs  custom.rs  enums.rs  lib.rs  runner.rs  runtime.rs  signal.rs  testing.rs  throttler.rs  timer.rs  xrate.rs
crates/common/src/actor/: data_actor.rs  indicators.rs  mod.rs  registry.rs  tests.rs
crates/common/src/cache/: config.rs  database.rs  index.rs  mod.rs  tests.rs
crates/common/src/generators/: client_order_id.rs  mod.rs  order_list_id.rs  position_id.rs
crates/common/src/logging/: headers.rs  logger.rs  macros.rs  mod.rs  writer.rs
crates/common/src/messages/: mod.rs
crates/common/src/msgbus/: core.rs  database.rs  handler.rs  listener.rs  matching.rs  message.rs  mod.rs  stubs.rs  switchboard.rs  tests.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: Cargo.toml  collections.rs  consts.rs  correctness.rs  datetime.rs  drop.rs  env.rs  lib.rs  math.rs  message.rs  nanos.rs  parsing.rs  paths.rs  serialization.rs  shared.rs  time.rs  uuid.rs
crates/core/src/ffi/: cvec.rs  datetime.rs  mod.rs  parsing.rs  string.rs  uuid.rs
crates/core/src/python/: casing.rs  datetime.rs  enums.rs  mod.rs  parsing.rs  serialization.rs  uuid.rs  version.rs
crates/cryptography/: Cargo.toml  README.md
crates/cryptography/src/: lib.rs  providers.rs  signing.rs  tls.rs
crates/cryptography/src/python/: mod.rs  signing.rs
crates/data/: Cargo.toml  README.md
crates/data/src/: aggregation.rs  client.rs  lib.rs
crates/data/src/engine/: book.rs  config.rs  handlers.rs  mod.rs  pool.rs
crates/data/tests/: client.rs  engine.rs
crates/data/tests/common/: mocks.rs  mod.rs
crates/execution/: Cargo.toml  README.md
crates/execution/src/: lib.rs  trailing.rs
crates/execution/src/client/: base.rs  mod.rs
crates/execution/src/engine/: config.rs  mod.rs  stubs.rs  tests.rs
crates/execution/src/matching_core/: handlers.rs  mod.rs
crates/execution/src/matching_engine/: adapter.rs  config.rs  engine.rs  ids_generator.rs  mod.rs  tests.rs
crates/execution/src/models/: fee.rs  fill.rs  latency.rs  mod.rs
crates/execution/src/order_emulator/: adapter.rs  emulator.rs  handlers.rs  mod.rs
crates/execution/src/order_manager/: manager.rs  mod.rs
crates/live/: Cargo.toml  README.md
crates/live/benches/: runner.rs
crates/live/src/: config.rs  data.rs  lib.rs  node.rs  runner.rs
crates/live/src/python/: mod.rs  node.rs
crates/model/: Cargo.toml  build.rs
crates/model/src/: currencies.rs  enums.rs  lib.rs  macros.rs  position.rs  stubs.rs  venues.rs
crates/model/src/accounts/: any.rs  base.rs  cash.rs  margin.rs  mod.rs  stubs.rs
crates/model/src/data/: bar.rs  bet.rs  close.rs  delta.rs  deltas.rs  depth.rs  funding.rs  greeks.rs  mod.rs  order.rs  prices.rs  quote.rs  status.rs  stubs.rs  trade.rs
crates/model/src/events/: mod.rs
crates/model/src/identifiers/: account_id.rs  actor_id.rs  client_id.rs  client_order_id.rs  component_id.rs  exec_algorithm_id.rs  instrument_id.rs  macros.rs  mod.rs  order_list_id.rs  position_id.rs  strategy_id.rs  stubs.rs  symbol.rs  trade_id.rs  trader_id.rs  venue.rs  venue_order_id.rs
crates/model/src/instruments/: any.rs  (+14 more)
crates/network/: Cargo.toml  README.md
crates/network/benches/: test_client.rs  test_server.rs
crates/network/src/: backoff.rs  error.rs  fix.rs  http.rs  lib.rs  logging.rs  mode.rs  net.rs  retry.rs  socket.rs  tls.rs  websocket.rs
crates/network/tests/: property_backoff.rs  property_ratelimiter.rs  turmoil_socket.rs  turmoil_websocket.rs
crates/option/: Cargo.toml  build.rs  cbindgen.toml  cbindgen_cython.toml
crates/option/src/: greeks.rs  lib.rs
crates/persistence/: Cargo.toml  README.md
crates/persistence/benches/: persistence.rs
crates/persistence/src/: config.rs  lib.rs  parquet.rs
crates/persistence/tests/: test_catalog.rs  test_util.rs
crates/portfolio/: Cargo.toml  README.md
crates/portfolio/src/: config.rs  lib.rs  manager.rs  portfolio.rs  tests.rs
crates/pyo3/: Cargo.toml
crates/pyo3/src/: lib.rs
crates/risk/: Cargo.toml  README.md
crates/risk/src/: lib.rs  sizing.rs
crates/serialization/: Cargo.toml  README.md
crates/serialization/src/: lib.rs
crates/system/: Cargo.toml  README.md
crates/system/src/: builder.rs  config.rs  factories.rs  kernel.rs  lib.rs  trader.rs
crates/testkit/: Cargo.toml  README.md
crates/testkit/src/: common.rs  files.rs  lib.rs
crates/trading/: Cargo.toml  README.md
crates/trading/src/: lib.rs  sessions.rs
(+412 files in other folders)
