[package]
name = "ant-backtest"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "ant_backtest"
crate-type = ["rlib", "staticlib"]

[features]
default = []
extension-module = [
  "ant-common/extension-module",
  "ant-core/extension-module",
  "ant-execution/extension-module",
  "ant-model/extension-module",
  "pyo3/extension-module",
]
ffi = [
  "cbindgen",
  "ant-core/ffi",
  "ant-common/ffi",
  "ant-execution/ffi",
  "ant-model/ffi",
]
python = [
  "ant-common/python",
  "ant-core/python",
  "ant-execution/python",
  "ant-model/python",
  "pyo3",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ant-common = { workspace = true }
ant-core = { workspace = true }
ant-data = { workspace = true }
ant-execution = { workspace = true }
ant-model = { workspace = true, features = ["stubs"] }
ant-persistence = { workspace = true }
ant-portfolio = { workspace = true }
ant-risk = { workspace = true }
ant-system = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true, optional = true }
rust_decimal = { workspace = true }
ustr = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true, optional = true }
