[package]
name = "ant-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "ant_common"
crate-type = ["rlib", "staticlib"]

[features]


[dependencies]
ant-core = {workspace = true}
ant-model = {workspace = true}

uuid = { workspace = true }
ustr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
ahash = {workspace = true}
indexmap = { workspace = true }
anyhow = {workspace = true}
bytes = { workspace = true }
tokio = {workspace = true}
futures = { workspace = true }
pyo3 = { workspace = true}
pyo3-async-runtimes = { workspace = true}
async-stream = { workspace = true }
rand = {workspace = true}
strum = { workspace = true }
chrono = {workspace = true}
async-trait = { workspace = true }
derive_builder = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
sysinfo = {workspace = true}
regex = {workspace = true}
rstest = { workspace = true}
tempfile = { workspace = true}
proptest = { workspace = true}

[dev-dependencies]
rstest = { workspace = true}

