[package]
name = "ant-cryptography"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "ant_cryptography"
crate-type = ["rlib", "staticlib", "cdylib"]
#
#[features]
#default = []
#extension-module = [
#  "ant-core/extension-module",
#  "pyo3/extension-module",
#]
#python = [
#  "ant-core/python",
#  "pyo3",
#]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ant-core = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
aws-lc-rs = { workspace = true }
pyo3 = { workspace = true, optional = true }
rand = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
pem = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
