[package]
name = "ant-network"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "ant_network"
crate-type = ["rlib", "staticlib", "cdylib"]

#[features]
#default = []
#extension-module = [
#  "ant-core/extension-module",
#  "pyo3/extension-module",
#]
#python = ["ant-core/python", "pyo3", "pyo3-async-runtimes"]
#
#[package.metadata.docs.rs]
#all-features = true
#rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ant-core = { workspace = true }
ant-cryptography = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
memchr = { workspace = true }
nonzero_ext = { workspace = true }
pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
rand = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
ant-common = { workspace = true }

axum = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
tracing-test = { workspace = true }
turmoil = { workspace = true }
