[package]
name = "ant-persistence"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "ant_persistence"
crate-type = ["rlib", "staticlib", "cdylib"]
#
#[features]
#default = []
#extension-module = [
#  "ant-core/extension-module",
#  "ant-model/extension-module",
#  "ant-serialization/extension-module",
#  "pyo3/extension-module",
#]
#ffi = [
#  "ant-core/ffi",
#  "ant-model/ffi",
#]
#python = [
#  "ant-core/ffi",
#  "ant-core/python",
#  "ant-model/python",
#  "ant-serialization/python",
#  "pyo3",
#]
#high-precision = [
#  "ant-model/high-precision",
#  "ant-serialization/high-precision",
#]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ant-common = { workspace = true }
ant-core = { workspace = true}
ant-model = { workspace = true}
ant-serialization = { workspace = true }

anyhow = { workspace = true }
arrow = { workspace = true }
binary-heap-plus = { workspace = true }
compare = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
heck = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
pyo3 = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
unbounded-interval-tree = { workspace = true }
url = { workspace = true }

[dev-dependencies]
ant-testkit = { workspace = true }

criterion = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { workspace = true }

[[bench]]
name = "persistence"
path = "benches/persistence.rs"
harness = false

[[bin]]
name = "to_json"
path = "bin/to_json.rs"
required-features = ["python"]

[[bin]]
name = "to_parquet"
path = "bin/to_parquet.rs"
required-features = ["python"]
