[package]
name = "ant-portfolio"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "ant_portfolio"
crate-type = ["rlib", "cdylib"]
#
#[features]
#default = []
#extension-module = [
#  "ant-analysis/extension-module",
#  "ant-common/extension-module",
#  "ant-core/extension-module",
#  "ant-model/extension-module",
#  "pyo3/extension-module",
#]
#python = [
#  "ant-analysis/python",
#  "ant-common/python",
#  "ant-core/python",
#  "ant-model/python",
#  "pyo3",
#]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ant-analysis = { workspace = true }
ant-common = { workspace = true }
ant-core = { workspace = true }
ant-model = { workspace = true }

log = { workspace = true }
pyo3 = { workspace = true, optional = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ustr = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
