[package]
name = "ant-serialization"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "ant_serialization"
crate-type = ["rlib", "staticlib", "cdylib"]
#
#[features]
#default = []
#extension-module = [
#  "ant-core/extension-module",
#  "ant-model/extension-module",
#  "pyo3/extension-module",
#]
#python = ["ant-core/python", "ant-model/python", "pyo3"]
#high-precision = ["ant-model/high-precision"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ant-core = { workspace = true }
ant-model = { workspace = true }

arrow = { workspace = true }
pyo3 = { workspace = true, optional = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ant-testkit = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
