[package]
name = "Ant-system"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "ant_system"
crate-type = ["rlib", "cdylib"]
#
#[features]
#default = []
#extension-module = ["pyo3/extension-module"]
#python = ["pyo3"]
#
#[package.metadata.docs.rs]
#all-features = true
#rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
Ant-common = { workspace = true }
Ant-core = { workspace = true }
Ant-data = { workspace = true }
Ant-execution = { workspace = true }
Ant-model = { workspace = true, features = ["stubs"] }
Ant-persistence = { workspace = true }
Ant-portfolio = { workspace = true }
Ant-risk = { workspace = true }
Ant-trading = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true, optional = true }
ustr = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
