[package]
name = "ant-trading"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "ant_trading"
crate-type = ["rlib", "cdylib"]
#
#[features]
#default = []
#extension-module = [
#  "ant-common/extension-module",
#  "ant-core/extension-module",
#  "ant-data/extension-module",
#  "ant-execution/extension-module",
#  "ant-model/extension-module",
#  "pyo3/extension-module",
#]
#python = [
#  "ant-common/python",
#  "ant-core/python",
#  "ant-data/python",
#  "ant-execution/python",
#  "ant-model/python",
#  "pyo3",
#]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ant-common = { workspace = true }
ant-core = { workspace = true }
ant-data = { workspace = true }
ant-execution = { workspace = true }
ant-model = { workspace = true}
ant-portfolio = { workspace = true }
ant-risk = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true, optional = true }
strum = { workspace = true }
ustr = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
