[package]
name = "ant-blockchain"
readme = "README.md"
publish = false  # Do not publish to crates.io for now
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "ant_blockchain"
crate-type = ["rlib", "cdylib"]
#
#[features]
#default = []
#extension-module = [
#  "ant-common/extension-module",
#  "ant-core/extension-module",
#  "ant-data/extension-module",
#  "ant-model/extension-module",
#  "ant-network/extension-module",
#  "pyo3/extension-module",
#]
#hypersync = [
#  "hypersync-client",
#  "hypersync-schema",
#]
#python = [
#  "ant-network/python",
#  "ant-system/python",
#  "pyo3",
#]
#
#[package.metadata.docs.rs]
#features = ["python"]
#rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ant-common = { workspace = true }
ant-core = { workspace = true }
ant-data = { workspace = true }
ant-infrastructure = { workspace = true }
ant-live = { workspace = true }
ant-model = { workspace = true }
ant-network = { workspace = true }
ant-system = { workspace = true }

ahash = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
dotenvy = { workspace = true }
enum_dispatch = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hypersync-client = { workspace = true, optional = true }
hypersync-schema = { workspace = true, optional = true }
log = { workspace = true }
pyo3 = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
ustr = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[[bin]]
name = "node_test"
path = "bin/node_test.rs"
required-features = ["hypersync"]
