[package]
name = "ant-coinbase-intx"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "ant_coinbase_intx"
crate-type = ["rlib", "cdylib"]
#
#[features]
#default = []
#extension-module = [
#  "ant-common/extension-module",
#  "ant-core/extension-module",
#  "ant-model/extension-module",
#  "ant-network/extension-module",
#  "pyo3/extension-module",
#]
#python = [
#  "ant-common/python",
#  "ant-core/python",
#  "ant-model/python",
#  "ant-network/python",
#  "pyo3",
#  "pyo3-async-runtimes",
#]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ant-common = { workspace = true }
ant-core = { workspace = true }
ant-model = { workspace = true }
ant-network = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
derive_builder = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
aws-lc-rs = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }  # Needed for example binaries
ustr = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
ant-testkit = { workspace = true }
rstest = { workspace = true }
tracing-test = { workspace = true }

[[bin]]
name = "coinbase-intx-http-private"
path = "bin/http-private.rs"
required-features = ["python"]

[[bin]]
name = "coinbase-intx-http-public"
path = "bin/http-public.rs"
required-features = ["python"]

[[bin]]
name = "coinbase-intx-ws"
path = "bin/websocket.rs"
required-features = ["python"]
